fixed some spacing issues

--- a/_sass/abstracts/_mixins.scss
+++ b/_sass/abstracts/_mixins.scss
@@ -10,7 +10,7 @@
 
   @include desktop {
     margin: 64px auto;
-    width: 94%;
+    width: $std-content-width-percent;
     max-width: $std-content-width-max;
   }
 }
@@ -24,7 +24,7 @@
 
   @include desktop {
     margin: 64px auto;
-    width: 94%;
+    width: $std-content-width-percent;
     max-width: $std-content-width-max;
   }
 }
@@ -40,7 +40,7 @@
 
   @include desktop {
     margin: 64px auto;
-    width: 88%;
+    width: $skinny-content-width-percent;
     max-width: $skinny-content-width-max;
   }
 }
@@ -54,7 +54,7 @@
 
   @include desktop {
     margin: 64px auto;
-    width: 88%;
+    width: $skinny-content-width-percent;
     max-width: $skinny-content-width-max;
   }
 }
@@ -134,7 +134,7 @@
   @include desktop {
     margin-left: auto;
     margin-right: auto;
-
+    max-width: $std-content-width-max;
   }
 }
 
