--- a/_sass/sections/_banner.scss
+++ b/_sass/sections/_banner.scss
@@ -10,6 +10,10 @@
   p {
     text-align: center;
   }
+
+  div {
+    @include content-width-std
+  }
 }
 
 .banner-green {
